--- a/EDF6.0/Packages/manifest.json
+++ b/EDF6.0/Packages/manifest.json
@@ -7,9 +7,9 @@
     "com.unity.textmeshpro": "2.0.1",
     "com.unity.timeline": "1.2.6",
     "com.unity.ugui": "1.0.0",
-    "com.unity.xr.arfoundation": "3.0.1",
+    "com.unity.xr.arfoundation": "3.1.0-preview.3",
     "com.unity.xr.arkit": "3.0.1",
-    "com.unity.xr.arkit-face-tracking": "3.0.1",
+    "com.unity.xr.arsubsystems": "3.1.0-preview.2",
     "com.unity.xr.management": "3.0.5",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
